# msp432_cmake_clang

./: CMakeLists.txt  README.html  README.md  build.sh
app/: MSP_EXP432E401Y_FREERTOS.cmd  mqttclient_wifi.syscfg
app/bluetooth/: platform_msp432e401y.c  project_zero.c  project_zero.h
app/bluetooth/Profile/: button_service.c  button_service.h  data_service.c  data_service.h  led_service.c  led_service.h  profile_util.h
app/common/: MSP_EXP432E401Y.c  client_cbs.c  httpsget.c  main_freertos.c  mqtt_client_app.c  network_if.c  startsntp.c  ti_drivers_net_wifi_Config.c  uart_term.c  user_callback_hook.c
app/device/: dht11.c  dht11.h  sr501.c  sr501.h
app/device/bmp180/: bmp180.c  bmp180.h
app/device/hmc5883l/: hmc5883l.c  hmc5883l.h
app/device/mpu6050/: mpu6050.c  mpu6050.h
app/device/mpu6050/eMPL/: inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c
app/driver/i2c/: i2c.c  i2c.h  sl_i2c.c  sl_i2c.h
app/inc/: Board.h  MSP_EXP432E401Y.h  client_cbs.h  network_if.h  uart_term.h
config/: FreeRTOSConfig.h
